test/unit-tests/data-and-models/testData/sample_pickles/negativeSamples/6.pickle
version https://git-lfs.github.com/spec/v1
oid sha256:dbcdfd3741f4cf875ce4bcf5fce26f5eed22098ff92a0fff09489a9f3a31840c
size 4560251
